force-app/main/default/objects/Deal_level_reporting__c/Deal_level_reporting__c.object-meta.xml
<CustomObject>
    <label>Deal level reporting</label>
    <nameField>
        <displayFormat>DLR-{00000}</displayFormat>
        <label>Deal level reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal level reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>