force-app/main/default/objects/Deal_level_reporting__c/fields/Impressions_Share__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Share__c</fullName>
    <formula>Deal__r.Impressions__c * Opportunity_Seller__r.Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impressions Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>