force-app/main/default/objects/Deal_level_reporting__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Deal level reporting</relationshipLabel>
    <relationshipName>Deal_level_reporting</relationshipName>
    <type>Lookup</type>
</CustomField>