force-app/main/default/objects/Deal_level_reporting__c/fields/Opportunity_Seller__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Seller</label>
    <referenceTo>Opportunity_Seller__c</referenceTo>
    <relationshipLabel>Deal level reporting</relationshipLabel>
    <relationshipName>Deal_level_reporting</relationshipName>
    <type>Lookup</type>
</CustomField>