force-app/main/default/objects/Deal_level_reporting__c/fields/Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share__c</fullName>
    <formula>Deal__r.Revenue__c * Opportunity_Seller__r.Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>